--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
       <!-- Latest Products -->
       <section class="section latest__products">
         <div class="title__container">
-          <div class="section__title active">
+          <div class="section__title filter-btn active" data-id="Latest Products">
             <span class="dot"></span>
             <h1 class="primary__title">Latest Products</h1>
           </div>
@@ -210,8 +210,8 @@
         <div class="container">
           <div class="glide" id="glide_2">
             <div class="glide__track" data-glide-el="track">
-              <ul class="glide__slides products-center">
-                <li class="glide__slide">
+              <ul class="glide__slides latest-center">
+                <!-- <li class="glide__slide">
                   <div class="product">
                     <div class="product__header">
                       <a href="#"><img src="./images/products/iPhone/iPhone1.jpeg" alt="product"></a>
@@ -489,7 +489,7 @@
                       <a href="#"><button type="submit" class="product__btn">Add To Cart</button></a>
                     </div>
                   </div>
-                </li>
+                </li> -->
               </ul>
             </div>
 
@@ -796,16 +796,23 @@
   <!-- End Main -->
 
   <!-- Footer -->
+  <footer id="footer" class="section">
+    <div class="footer__top">
+
+    </div>
+    <div class="footer__bottom">
+
+    </div>
+  </footer>
   <!-- End Footer -->
 
   <!-- Glide Carousel Script -->
-  <script src="node_modules/@glidejs/glide/dist/glide.min.js"></script>
-
-  <!-- Isotope Filtering -->
-  <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.js"></script>
+  <!-- <script src="node_modules/@glidejs/glide/dist/glide.min.js"></script> -->
 
   <!-- Custom JavaScript -->
-  <script src="./js/app.js"></script>
+  <script src="./js/products.js"></script>
+  <script src="./js/slider.js"></script>
+  <script src="./js/index.js"></script>
 </body>
 
 </html>
