--- a/product.html
+++ b/product.html
@@ -252,7 +252,7 @@
             <section class="section related__products">
                 <div class="title__container">
                     <div class="section__titles">
-                        <div class="section__title active">
+                        <div class="section__title active filter-btn" data-id="Related Products">
                             <span class="dot"></span>
                             <h1 class="primary__title">Related Products</h1>
                         </div>
@@ -261,8 +261,8 @@
                 <div class="container">
                     <div class="glide" id="glide_3">
                         <div class="glide__track" data-glide-el="track">
-                            <ul class="glide__slides">
-                                <li class="glide__slide">
+                            <ul class="glide__slides related__center">
+                                <!-- <li class="glide__slide">
                                     <div class="product">
                                         <div class="product__header">
                                             <a href="#"><img src="./images/products/iPhone/iPhone1.jpeg"
@@ -428,7 +428,7 @@
                                                     Cart</button></a>
                                         </div>
                                     </div>
-                                </li>
+                                </li> -->
                             </ul>
                         </div>
 
@@ -452,7 +452,7 @@
             <section class="section latest__products">
                 <div class="title__container">
                     <div class="section__titles">
-                        <div class="section__title active">
+                        <div class="section__title filter-btn active" data-id="latest__products">
                             <span class="dot"></span>
                             <h1 class="primary__title">Latest Products</h1>
                         </div>
@@ -461,8 +461,8 @@
                 <div class="container">
                     <div class="glide" id="glide_2">
                         <div class="glide__track" data-glide-el="track">
-                            <ul class="glide__slides">
-                                <li class="glide__slide">
+                            <ul class="glide__slides latest__center">
+                                <!-- <li class="glide__slide">
                                     <div class="product">
                                         <div class="product__header">
                                             <a href="#"><img src="./images/products/iPhone/iPhone1.jpeg"
@@ -758,7 +758,7 @@
                                                     Cart</button></a>
                                         </div>
                                     </div>
-                                </li>
+                                </li> -->
                             </ul>
                         </div>
 
@@ -785,7 +785,9 @@
     <script src="node_modules/@glidejs/glide/dist/glide.min.js"></script>
 
     <!-- Custom JavaScript -->
-    <script src="./js/app.js"></script>
+    <script src="./js/products.js"></script>
+    <script src="./js/slider.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 
 </html>
