--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                 <li class="glide__slide">
                   <div class="product">
                     <div class="product__header">
-                      <a href="#"><img src="/images/products/iPhone/iphone6.jpeg" alt="product"></a>
+                      <img src="/images/products/iPhone/iphone6.jpeg" alt="product">
                     </div>
                     <div class="product__footer">
                       <h3>Apple iPhone 11</h3>
@@ -245,7 +245,7 @@
                 <li class="glide__slide">
                   <div class="product">
                     <div class="product__header">
-                      <a href="#"><img src="/images/products/sumsung/samsung5.jpeg" alt="product"></a>
+                      <img src="/images/products/sumsung/samsung5.jpeg" alt="product">
                     </div>
                     <div class="product__footer">
                       <h3>Samsung Galaxy</h3>
@@ -299,7 +299,7 @@
                 <li class="glide__slide">
                   <div class="product">
                     <div class="product__header">
-                      <a href="#"><img src="/images/products/headphone/headphone4.jpeg" alt="product"></a>
+                      <img src="/images/products/headphone/headphone4.jpeg" alt="product">
                     </div>
                     <div class="product__footer">
                       <h3>Sony WH-CH510</h3>
@@ -353,7 +353,7 @@
                 <li class="glide__slide">
                   <div class="product">
                     <div class="product__header">
-                      <a href="#"><img src="/images/products/sumsung/samsung3.jpeg" alt="product"></a>
+                      <img src="/images/products/sumsung/samsung3.jpeg" alt="product">
                     </div>
                     <div class="product__footer">
                       <h3>Samsung Galaxy</h3>
@@ -407,7 +407,7 @@
                 <li class="glide__slide">
                   <div class="product">
                     <div class="product__header">
-                      <a href="#"><img src="./images/products/iPhone/iphone2.jpeg" alt="product"></a>
+                      <img src="./images/products/iPhone/iphone2.jpeg" alt="product">
                     </div>
                     <div class="product__footer">
                       <h3>Apple iPhone 11</h3>
@@ -461,7 +461,7 @@
                 <li class="glide__slide">
                   <div class="product">
                     <div class="product__header">
-                      <a href="#"><img src="images/products/headphone/headphone2.jpeg" alt="product"></a>
+                      <img src="images/products/headphone/headphone2.jpeg" alt="product">
                     </div>
                     <div class="product__footer">
                       <h3>Sony WH-CH510</h3>
@@ -515,7 +515,7 @@
                 <li class="glide__slide">
                   <div class="product">
                     <div class="product__header">
-                      <a href="#"><img src="images/products/sumsung/samsung1.jpeg" alt="product"></a>
+                      <img src="images/products/sumsung/samsung1.jpeg" alt="product">
                     </div>
                     <div class="product__footer">
                       <h3>Samsung Galaxy</h3>
@@ -569,7 +569,7 @@
                 <li class="glide__slide">
                   <div class="product">
                     <div class="product__header">
-                      <a href="#"><img src="images/products/headphone/headphone1.jpeg" alt="product"></a>
+                      <img src="images/products/headphone/headphone1.jpeg" alt="product">
                     </div>
                     <div class="product__footer">
                       <h3>Sony WH-CH510</h3>
@@ -623,7 +623,7 @@
                 <li class="glide__slide">
                   <div class="product">
                     <div class="product__header">
-                      <a href="#"><img src="images/products/iPhone/iphone1.jpeg" alt="product"></a>
+                      <img src="images/products/iPhone/iphone1.jpeg" alt="product">
                     </div>
                     <div class="product__footer">
                       <h3>Apple iPhone XR</h3>
