--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           </div>
 
           <div class="nav__logo">
-            <a href="#header">
+            <a href="#header" class="scroll-link">
               <h2>PHONE</h2>
             </a>
           </div>
@@ -53,16 +53,16 @@
             </div>
             <ul class="nav__list">
               <li class="nav__item">
-                <a href="#header" class="nav__link">Home</a>
+                <a href="#header" class="nav__link scroll-link">Home</a>
               </li>
               <li class="nav__item">
-                <a href="#category" class="nav__link">Category</a>
+                <a href="#category" class="nav__link scroll-link">Category</a>
               </li>
               <li class="nav__item">
-                <a href="#news" class="nav__link">Blog</a>
+                <a href="#news" class="nav__link scroll-link">Blog</a>
               </li>
               <li class="nav__item">
-                <a href="#contact" class="nav__link">Contact</a>
+                <a href="#contact" class="nav__link scroll-link">Contact</a>
               </li>
             </ul>
           </div>
@@ -101,6 +101,7 @@
                 <div class="hero__left">
                   <span class="">New Inspiration 2020</span>
                   <h1 class="">PHONES MADE FOR YOU!</h1>
+                  <p>Trending from mobile and headphone style collection</p>
                   <a href="#"><button class="hero__btn">SHOP NOW</button></a>
                 </div>
                 <div class="hero__right">
@@ -115,6 +116,7 @@
                 <div class="hero__left">
                   <span>New Inspiration 2020</span>
                   <h1>PHONES MADE FOR YOU!</h1>
+                  <p>Trending from mobile and headphone style collection</p>
                   <a href="#"><button class="hero__btn">SHOP NOW</button></a>
                 </div>
                 <div class="hero__right">
@@ -1086,7 +1088,7 @@
 
   <!-- Go To -->
 
-  <a href="#header" class="goto-top">
+  <a href="#header" class="goto-top scroll-link">
     <svg>
       <use xlink:href="./images/sprite.svg#icon-arrow-up"></use>
     </svg>
@@ -1101,8 +1103,8 @@
 
   <!-- Custom JavaScript -->
   <script src="./js/products.js"></script>
-  <script src="./js/index.js"></script>
   <script src="./js/slider.js"></script>
+  <script src="./js/index.js"></script>
 </body>
 
 </html>
