--- a/product.html
+++ b/product.html
@@ -158,7 +158,7 @@
             <div class="product-detail__content">
               <h3>Apple iPhone XR</h3>
               <div class="price">
-                <span class="new__price">$250</span>
+                <span class="new__price">$250.99</span>
               </div>
               <div class="product__review">
                 <div class="rating">
@@ -183,63 +183,90 @@
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt
                 a doloribus iste natus et facere?
+                dolor sit amet consectetur adipisicing elit. Sunt
+                a doloribus iste natus et facere?
               </p>
-              <ul class="product__info">
-                <li>
-                  <span>Brand:</span>
-                  <a href="#">Apple</a>
-                </li>
-                <li>
-                  <span>Product Type:</span>
-                  <a href="#">Phone</a>
-                </li>
-                <li>
-                  <span>Availability:</span>
-                  <a href="#">In Stock (7 Items)</a>
-                </li>
-              </ul>
-              <div class="product__color">
-                <h4>Color:</h4>
-                <ul>
-                  <li>
-                    <a href="#" class="color-black"></a>
+              <div class="product__info-container">
+                <ul class="product__info">
+                  <li class="select">
+                    <div class="select__option">
+                      <label for="colors">Color</label>
+                      <select name="colors" id="colors" class="select-box">
+                        <option value="blue">blue</option>
+                        <option value="red">red</option>
+                      </select>
+                    </div>
+                    <div class="select__option">
+                      <label for="size">Inches</label>
+                      <select name="size" id="size" class="select-box">
+                        <option value="6.65">6.65</option>
+                        <option value="7.50">7.50</option>
+                      </select>
+                    </div>
                   </li>
                   <li>
-                    <a href="#" class="color-blue"></a>
+
+                    <div class="input-counter">
+                      <span>Quantity:</span>
+                      <div>
+                        <span class="minus-btn">
+                          <svg>
+                            <use xlink:href="./images/sprite.svg#icon-minus"></use>
+                          </svg>
+                        </span>
+                        <input type="text" min="1" value="1" max="10" class="counter-btn">
+                        <span class="plus-btn">
+                          <svg>
+                            <use xlink:href="./images/sprite.svg#icon-plus"></use>
+                          </svg>
+                        </span>
+                      </div>
+                    </div>
+                  </li>
+
+                  <li>
+                    <span>Subtotal:</span>
+                    <a href="#" class="new__price">$250.99</a>
                   </li>
                   <li>
-                    <a href="#" class="color-red"></a>
+                    <span>Brand:</span>
+                    <a href="#">Apple</a>
                   </li>
                   <li>
-                    <a href="#" class="color-white"></a>
+                    <span>Product Type:</span>
+                    <a href="#">Phone</a>
+                  </li>
+                  <li>
+                    <span>Availability:</span>
+                    <a href="#" class="in-stock">In Stock (7 Items)</a>
                   </li>
                 </ul>
-              </div>
-              <div class="product-info__btn">
-                <a href="#">
-                  <span>
-                    <svg>
-                      <use xlink:href="./images/sprite.svg#"></use>
-                    </svg>
-                  </span>
-                  SIZE GUIDE
-                </a>
-                <a href="#">
-                  <span>
-                    <svg>
-                      <use xlink:href="./images/sprite.svg#"></use>
-                    </svg>
-                  </span>
-                  SHIPPING
-                </a>
-                <a href="#">
-                  <span>
-                    <svg>
-                      <use xlink:href="./images/sprite.svg#"></use>
-                    </svg>
-                  </span>
-                  ASK ABOUT THIS PRODUCT
-                </a>
+                <div class="product-info__btn">
+                  <a href="#">
+                    <span>
+                      <svg>
+                        <use xlink:href="./images/sprite.svg#icon-crop"></use>
+                      </svg>
+                    </span>&nbsp;
+                    SIZE GUIDE
+                  </a>
+                  <a href="#">
+                    <span>
+                      <svg>
+                        <use xlink:href="./images/sprite.svg#icon-truck"></use>
+                      </svg>
+                    </span>&nbsp;
+                    SHIPPING
+                  </a>
+                  <a href="#">
+                    <span>
+                      <svg>
+                        <use xlink:href="./images/sprite.svg#icon-envelope-o"></use>
+                      </svg>&nbsp;
+                    </span>
+                    ASK ABOUT THIS PRODUCT
+                  </a>
+                </div>
               </div>
             </div>
           </div>
@@ -249,69 +276,15 @@
       <!-- Related Products -->
       <section class="section related__products">
         <div class="title__container">
-          <div class="section__title filter-btn active" data-id="Latest Products">
-            <span class="dot"></span>
+          <div class="section__title filter-btn active>
+            <span class=" dot"></span>
             <h1 class="primary__title">Latest Products</h1>
           </div>
         </div>
         <div class="container" data-aos="fade-up" data-aos-duration="1200">
-          <div class="glide" id="glide_2">
+          <div class="glide" id="glide_3">
             <div class="glide__track" data-glide-el="track">
               <ul class="glide__slides latest-center">
-                <li class="glide__slide">
-                  <div class="product">
-                    <div class="product__header">
-                      <a href="#"><img src="/images/products/iPhone/iphone6.jpeg" alt="product"></a>
-                    </div>
-                    <div class="product__footer">
-                      <h3>Apple iPhone 11</h3>
-                      <div class="rating">
-                        <svg>
-                          <use xlink:href="./images/sprite.svg#icon-star-full"></use>
-                        </svg>
-                        <svg>
-                          <use xlink:href="./images/sprite.svg#icon-star-full"></use>
-                        </svg>
-                        <svg>
-                          <use xlink:href="./images/sprite.svg#icon-star-full"></use>
-                        </svg>
-                        <svg>
-                          <use xlink:href="./images/sprite.svg#icon-star-full"></use>
-                        </svg>
-                        <svg>
-                          <use xlink:href="./images/sprite.svg#icon-star-empty"></use>
-                        </svg>
-                      </div>
-                      <div class="product__price">
-                        <h4>$750</h4>
-                      </div>
-                      <a href="#"><button type="submit" class="product__btn">Add To Cart</button></a>
-                    </div>
-                    <ul>
-                      <li>
-                        <a data-tip="Quick View" data-place="left" href="#">
-                          <svg>
-                            <use xlink:href="./images/sprite.svg#icon-eye"></use>
-                          </svg>
-                        </a>
-                      </li>
-                      <li>
-                        <a data-tip="Add To Wishlist" data-place="left" href="#">
-                          <svg>
-                            <use xlink:href="./images/sprite.svg#icon-heart-o"></use>
-                          </svg>
-                        </a>
-                      </li>
-                      <li>
-                        <a data-tip="Add To Compare" data-place="left" href="#">
-                          <svg>
-                            <use xlink:href="./images/sprite.svg#icon-loop2"></use>
-                          </svg>
-                        </a>
-                      </li>
-                    </ul>
-                  </div>
-                </li>
                 <li class="glide__slide">
                   <div class="product">
                     <div class="product__header">
@@ -366,13 +339,14 @@
                     </ul>
                   </div>
                 </li>
+
                 <li class="glide__slide">
                   <div class="product">
                     <div class="product__header">
-                      <a href="#"><img src="/images/products/headphone/headphone4.jpeg" alt="product"></a>
+                      <a href="#"><img src="/images/products/iPhone/iphone6.jpeg" alt="product"></a>
                     </div>
                     <div class="product__footer">
-                      <h3>Sony WH-CH510</h3>
+                      <h3>Apple iPhone 11</h3>
                       <div class="rating">
                         <svg>
                           <use xlink:href="./images/sprite.svg#icon-star-full"></use>
@@ -391,7 +365,7 @@
                         </svg>
                       </div>
                       <div class="product__price">
-                        <h4>$600</h4>
+                        <h4>$750</h4>
                       </div>
                       <a href="#"><button type="submit" class="product__btn">Add To Cart</button></a>
                     </div>
@@ -531,10 +505,65 @@
                 <li class="glide__slide">
                   <div class="product">
                     <div class="product__header">
-                      <a href="#"><img src="images/products/headphone/headphone2.jpeg" alt="product"></a>
+                      <a href="#"><img src="/images/products/headphone/headphone4.jpeg" alt="product"></a>
                     </div>
                     <div class="product__footer">
                       <h3>Sony WH-CH510</h3>
+                      <div class="rating">
+                        <svg>
+                          <use xlink:href="./images/sprite.svg#icon-star-full"></use>
+                        </svg>
+                        <svg>
+                          <use xlink:href="./images/sprite.svg#icon-star-full"></use>
+                        </svg>
+                        <svg>
+                          <use xlink:href="./images/sprite.svg#icon-star-full"></use>
+                        </svg>
+                        <svg>
+                          <use xlink:href="./images/sprite.svg#icon-star-full"></use>
+                        </svg>
+                        <svg>
+                          <use xlink:href="./images/sprite.svg#icon-star-empty"></use>
+                        </svg>
+                      </div>
+                      <div class="product__price">
+                        <h4>$600</h4>
+                      </div>
+                      <a href="#"><button type="submit" class="product__btn">Add To Cart</button></a>
+                    </div>
+                    <ul>
+                      <li>
+                        <a data-tip="Quick View" data-place="left" href="#">
+                          <svg>
+                            <use xlink:href="./images/sprite.svg#icon-eye"></use>
+                          </svg>
+                        </a>
+                      </li>
+                      <li>
+                        <a data-tip="Add To Wishlist" data-place="left" href="#">
+                          <svg>
+                            <use xlink:href="./images/sprite.svg#icon-heart-o"></use>
+                          </svg>
+                        </a>
+                      </li>
+                      <li>
+                        <a data-tip="Add To Compare" data-place="left" href="#">
+                          <svg>
+                            <use xlink:href="./images/sprite.svg#icon-loop2"></use>
+                          </svg>
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
+                </li>
+
+                <li class="glide__slide">
+                  <div class="product">
+                    <div class="product__header">
+                      <a href="#"><img src="images/products/sumsung/samsung1.jpeg" alt="product"></a>
+                    </div>
+                    <div class="product__footer">
+                      <h3>Samsung Galaxy</h3>
                       <div class="rating">
                         <svg>
                           <use xlink:href="./images/sprite.svg#icon-star-full"></use>
@@ -585,10 +614,10 @@
                 <li class="glide__slide">
                   <div class="product">
                     <div class="product__header">
-                      <a href="#"><img src="images/products/sumsung/samsung1.jpeg" alt="product"></a>
+                      <a href="#"><img src="images/products/headphone/headphone2.jpeg" alt="product"></a>
                     </div>
                     <div class="product__footer">
-                      <h3>Samsung Galaxy</h3>
+                      <h3>Sony WH-CH510</h3>
                       <div class="rating">
                         <svg>
                           <use xlink:href="./images/sprite.svg#icon-star-full"></use>
