--- a/product.html
+++ b/product.html
@@ -22,8 +22,8 @@
 
 <body>
   <header id="header" class="header">
-    <div class="container">
-      <div class="navigation">
+    <div class="navigation">
+      <div class="container">
         <nav class="nav">
           <div class="nav__hamburger">
             <svg>
@@ -1387,6 +1387,14 @@
   </footer>
 
   <!-- End Footer -->
+
+  <!-- Go To -->
+
+  <a href="#header" class="goto-top scroll-link">
+    <svg>
+      <use xlink:href="./images/sprite.svg#icon-arrow-up"></use>
+    </svg>
+  </a>
 
   <!-- Glide Carousel Script -->
   <script src="node_modules/@glidejs/glide/dist/glide.min.js"></script>
